# exercises

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  testscript.py
.dotfiles/: README_REPLIT
.github/workflows/: main.yml
AutoFeedback_grader/: README.rst  setup.cfg  setup.py
AutoFeedback_grader/AutoFeedback_grader/: test_exercises.py
AutoFeedback_templater/: README.rst  new_exercise.py  setup.cfg  setup.py
AutoFeedback_templater/AutoFeedback_templater/: _version.py  new_exercise.py
MTH2011/LA_assignment1/: LA_assignment1.ipynb  instructions.md  main.py  runtest.sh  setup.py  t.py
MTH2011/LA_assignment2/: LA_assignment2.ipynb  instructions.md  main.py  setup.py  some_instructions.py  t.py
MTH2011/LA_assignment3/: LA_assignment3.ipynb  instructions.md  main.py  setup.py  t.py  test.py  worked.py
MTH2011/LA_assignment4/: LA_assignment4.ipynb  instructions.md  main.py  setup.py
MTH2011/LA_assignment5/: LA_assignment5.ipynb  instructions.md  main.py  setup.py  t.py  worked.py
MTH2011/LA_assignment6/: LA_assignment6.ipynb  instructions.md  main.py  setup.py  worked.py
MTH2011/LA_assignment7/: LA_assignment7.ipynb  handGS.py  instructions.md  main.py  nq.py  numpy_exp.py  setup.py  sympy_exp.py  worked.py
MTH2011/LA_assignment8/: LA_assignment8.ipynb  instructions.md  main.py  setup.py  worked.py
MTH3012/: MTH3012_Sheet_1.ipynb  MTH3012_Sheet_2.ipynb  MTH3012_Sheet_3.ipynb
marking/: README.md  grade_ipynbs.py  requirements.txt
tests/: test_exercises.py
utilities/: new_exercise.py
(+594 files in other folders)
